source/assets/stylesheets/sections/_front-cover.scss
//
// Front Cover
//


.front-cover {
  @include flex-container(column);
  height: 100vh;
  width: 100%;
  padding: 1rem;
  color: $light-grey-1;
  @include background-gradient;

  @include media($very-large-devices) {
    width: 100%;
  }
}

.cover-name {
  position: relative;
}

.cover-name__question-mark {
  position: absolute;
  top: -1.91rem;
  right: calc(50% - 1.4rem);
  padding: 1rem 1rem 1.5rem 1rem;
  font-size: 1rem;
  opacity: .55;
  transition: opacity .5s;
  cursor: help;

  @include media($medium-devices) {
    top: -.8rem;
    right: -3.5rem;
    padding: 1.5rem;
    font-size: 1.4rem;
  }

  @include media($large-devices) {
    top: 0;
    right: -4rem;
    padding: 1.5rem;
    font-size: 1.5rem;
  }
}

.cover-name__name {
  position: relative;
  margin-bottom: .7rem;
  font-style: italic;
  font-size: 2rem;
  font-weight: 600;
  transition: all .5s;

  @include media($medium-devices) {
    font-size: 4rem;
  }

  @include media($large-devices) {
    font-size: 5rem;
  }
}

.front-cover__hr {
  width: 12.9rem;
  height: 2px;
  background-color: $light-grey-1;
  border: 0;

  @include media($medium-devices) {
    margin: 1.25rem;
    width: 16.4rem;
  }

  @include media($large-devices) {
    width: 20.2rem;
    margin: 1.4rem;
  }
}

.front-cover__short-description {
  margin-top: .88rem;
  font-family: $dejavu-sans;
  font-size: 1.2rem;

  @include media($medium-devices) {
    margin-top: 1.01rem;
    font-size: 1.7rem;
  }

  @include media($large-devices) {
    margin-top: 1.35rem;
    font-size: 2.1rem;
  }
}

.front-cover__chevron-down {
  position: absolute;
  bottom: 0.35rem;
  padding: 1rem;
  width: 3.8rem;
  opacity: .8;
  border: 0;
  transition: opacity .5s;

  @include media($medium-devices) {
    bottom: 0.9rem;
    width: 5.1rem;
  }

  @include media-iphone-large {
    bottom: 0.7rem;
    width: 4.4rem;
  }
}

.front-cover__chevron-down:hover,
.front-cover__chevron-down:focus {
  opacity: 1;
}

